Mise a jours du 06/11/2023
header fait
body fait
fooder a faire

--- a/index.html
+++ b/index.html
@@ -3,9 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"  href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Nosifer&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
     <title>PortFolio</title>
 </head>
-<body>
-    <h1>Mon Portfolio</h1>
+<body class="background">
+ <header class="flex between border border1">
+    <div class="logo">
+        <img src="image/cadeau-logo-prenom-arthur-tablier-contraste-removebg-preview.png" alt="logo">
+    </div>
+    <div>
+        <nav>
+        <input id="searchbar" onkeyup="Rechercher()" type="text"
+        name="search" placeholder="rechercher">
+    </nav>
+</div>
+<div></div>
+
+</header>
+
+<div class= "center">
+    <img class="image" src="image/9A56E12B-5B17-4EE1-AABA-417BDF1EDB6A.JPG" alt="image">
+</div>
+<div class="border">
+    <h1 class="titre center">Présentation SUR Moi</h1>
+</div>
+<div>
+    <p class="border1 text">
+    Bonjours, je m'appelle Arthur Montélimard, j'ai 19 ans et je suis dans le jeux vidéo,
+    le montage vidéo,la programmation,le graphisme et le réseau depuis tout petit. Je fait 
+    des vidéos depuis de nombreuse années, et je m'amméliore de plus en plus pour faire du contenu de qualité. 
+    Donc je vous mets une vidéo en dessous pour découvrir un montage que j'ai fait il y a déjà quelques temps. 
+    Ainsi je pourrais vous inciter par la suite à venir regarder mes prochaines vidéos et à vous abonner ^^.
+    </p>
+</div>
+<div>
+    <h2 class="titre1 center">Comptétence</h2>
+</div>
+<div class="center text border1">
+ <ul>
+    <li>Montage Vidéo 5/10</li>
+    <li>programmation 6/10</li>
+    <li>graphisme 4/10</li>
+    <li>réseau 9/10</li>
+ </ul>
+</div>
+<div>
+    <h2 class="center rea">Mes Réalisation</h2>
+</div>
+    <div class="border1">
+    <iframe class="vidéo" width="560" height="315" src="https://www.youtube.com/embed/yttrBfmovdw?si=XIfCDuRpeojq7Gyq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe class="vidéo" width="560" height="315" src="https://www.youtube.com/embed/HBAJS5RgiVI?si=sgAKS6h-WE4nqq-n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe class="vidéo" width="560" height="315" src="https://www.youtube.com/embed/_nC_NtbzoAk?si=wCnf9DADmlYxZUEf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
 </body>
 </html>
