--- a/index.html
+++ b/index.html
@@ -1,63 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Nosifer&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Nosifer&family=Open+Sans&family=Sedgwick+Ave+Display&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
     <title>PortFolio</title>
 </head>
+
 <body class="background">
- <header class="flex between border border1">
-    <div class="logo">
-        <img src="image/cadeau-logo-prenom-arthur-tablier-contraste-removebg-preview.png" alt="logo">
+    <header class="flex between border border1">
+        <div class="logo">
+            <img src="image/cadeau-logo-prenom-arthur-tablier-contraste-removebg-preview.png" alt="logo">
+        </div>
+        <nav class="flex align-center">
+            <input id="searchbar" onkeyup="Rechercher()" type="text" name="search" placeholder="rechercher">
+        </nav>
+    </header>
+
+    <div class="center">
+        <img class="image" src="image/9A56E12B-5B17-4EE1-AABA-417BDF1EDB6A.JPG" alt="image">
     </div>
     <div>
-        <nav>
-        <input id="searchbar" onkeyup="Rechercher()" type="text"
-        name="search" placeholder="rechercher">
-    </nav>
-</div>
-<div></div>
+        <h1 class="titre center">Présentation SUR Moi</h1>
+    </div>
+    <div>
+        <p class="text">
+            Bonjours, je m'appelle Arthur Montélimard, j'ai 19 ans et je suis dans le jeux vidéo,
+            le montage vidéo,la programmation,le graphisme et le réseau depuis tout petit. Je fait
+            des vidéos depuis de nombreuse années, et je m'amméliore de plus en plus pour faire du contenu de qualité.
+            Donc je vous mets une vidéo en dessous pour découvrir un montage que j'ai fait il y a déjà quelques temps.
+            Ainsi je pourrais vous inciter par la suite à venir regarder mes prochaines vidéos et à vous abonner ^^.
+        </p>
+    </div>
+    <div>
+        <h2 class="titre1 center">Comptétence</h2>
+    </div>
+    <div class="center text">
+        <ul>
+            <li>Montage Vidéo 5/10</li>
+            <li>programmation 6/10</li>
+            <li>graphisme 4/10</li>
+            <li>réseau 9/10</li>
+        </ul>
+    </div>
+    <div>
+        <h2 class="center rea">Mes Réalisation</h2>
+    </div>
+    <div>
+        <iframe class="vidéo zoom" width="560" height="315"
+            src="https://www.youtube.com/embed/yttrBfmovdw?si=XIfCDuRpeojq7Gyq" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <iframe class="vidéo zoom" width="560" height="315"
+            src="https://www.youtube.com/embed/HBAJS5RgiVI?si=sgAKS6h-WE4nqq-n" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <iframe class="vidéo zoom" width="560" height="315"
+            src="https://www.youtube.com/embed/_nC_NtbzoAk?si=wCnf9DADmlYxZUEf" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <p class="gauche text">Ma premiere Music</p>
+        <p class="centre text">Ma Première vidéo ou j'ai passer le plus de temps de montage</p>
+        <p class="droite text">Ma deuxième vidéo bien monté</p>
+    </div>
+    <footer>
+        <div>
+            <h3 class="text-black">Mention Légal</h3>
+        </div>
+        <div>
+            <h3 class="between text-black">Réseau</h3>
+        </div>
+        <div class="between">
+            <p class="text-black zoom"><i class="fa-brands fa-instagram"></i></p>
+            <p class="text-black zoom"><i class="fa-brands fa-twitter"></i></p>
+            <p class="text-black zoom"><i class="fa-brands fa-facebook"></i></p>
+            <p class="text-black zoom"><i class="fa-brands fa-youtube"></i></p>
+            <p class="text-black zoom"><i class="fa-brands fa-tiktok"></i></p>
+            <p class="text-black zoom"><i class="fa-brands fa-discord"></i></p>
 
-</header>
+        </div>
 
-<div class= "center">
-    <img class="image" src="image/9A56E12B-5B17-4EE1-AABA-417BDF1EDB6A.JPG" alt="image">
-</div>
-<div class="border">
-    <h1 class="titre center">Présentation SUR Moi</h1>
-</div>
-<div>
-    <p class="border1 text">
-    Bonjours, je m'appelle Arthur Montélimard, j'ai 19 ans et je suis dans le jeux vidéo,
-    le montage vidéo,la programmation,le graphisme et le réseau depuis tout petit. Je fait 
-    des vidéos depuis de nombreuse années, et je m'amméliore de plus en plus pour faire du contenu de qualité. 
-    Donc je vous mets une vidéo en dessous pour découvrir un montage que j'ai fait il y a déjà quelques temps. 
-    Ainsi je pourrais vous inciter par la suite à venir regarder mes prochaines vidéos et à vous abonner ^^.
-    </p>
-</div>
-<div>
-    <h2 class="titre1 center">Comptétence</h2>
-</div>
-<div class="center text border1">
- <ul>
-    <li>Montage Vidéo 5/10</li>
-    <li>programmation 6/10</li>
-    <li>graphisme 4/10</li>
-    <li>réseau 9/10</li>
- </ul>
-</div>
-<div>
-    <h2 class="center rea">Mes Réalisation</h2>
-</div>
-    <div class="border1">
-    <iframe class="vidéo" width="560" height="315" src="https://www.youtube.com/embed/yttrBfmovdw?si=XIfCDuRpeojq7Gyq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe class="vidéo" width="560" height="315" src="https://www.youtube.com/embed/HBAJS5RgiVI?si=sgAKS6h-WE4nqq-n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe class="vidéo" width="560" height="315" src="https://www.youtube.com/embed/_nC_NtbzoAk?si=wCnf9DADmlYxZUEf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
-
+    </footer>
 </body>
+
 </html>
